Update author attribution to 'Daniel McShan, in voce Diophantus'
- Updated essay byline and epilogue
- Updated index page attribution
- Updated _config.yml author field
- Updated README citation

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Jekyll Configuration for GitHub Pages
 title: "One Constraint to Bind Them"
 description: "A Diophantine Lens on a Combinatorial Artifact"
-author: "Diophantus of Alexandria"
+author: "Daniel McShan, in voce Diophantus"
 institution: "Inquiry.Institute"
 
 # GitHub Pages settings
