--- a/.github/workflows/analysis.yml
+++ b/.github/workflows/analysis.yml
@@ -39,6 +39,8 @@ jobs:
       - name: Run LLM analysis
         id: llm_analysis
         env:
+          OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
+          OPENROUTER_MODEL: ${{ secrets.OPENROUTER_MODEL || 'openai/gpt-4o' }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: |
           python analyze_results.py
