--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,10 @@ plugins:
   - jekyll-feed
   - jekyll-seo-tag
 
+# Custom CSS
+sass:
+  style: compressed
+
 
 # Site settings
 baseurl: "/diophantine"
